--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+title: Cantera Workshop and Forum at the 2017 National Combustion Meeting
+description: Learn about how to use and develop Cantera
+
 theme: jekyll-theme-slate
