updates website title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cantera Workshop at the 2021 National Combustion Meeting
+title: Cantera Workshop at the 2022 International Symposium on Combustion
 description: Learn about how to use and develop Cantera
 
 theme: jekyll-theme-slate
