Updates for 2025 U.S. National Combustion Meeting.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cantera Workshop at the 2022 International Symposium on Combustion
+title: Cantera Workshop at the 2025 U.S. National Combustion Meeting
 description: Learn about how to use and develop Cantera
 
 theme: jekyll-theme-slate
